--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
     "@ionic-native/http": "^5.33.0",
+    "@ionic-native/splash-screen": "^5.33.0",
     "@ionic/angular": "^5.5.2",
     "codyhouse-framework": "^2.8.9",
     "cordova-plugin-advanced-http": "^3.1.0",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-splashscreen": "^6.0.0",
     "request": "^2.88.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -48,6 +50,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
+    "cordova-res": "^0.15.3",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
@@ -64,5 +67,6 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.0.2"
   },
+  "resources": "cordova-res ios && cordova-res android && node scripts/resources.js",
   "description": "An Ionic project"
 }
